--- a/clone/static/css/style.css
+++ b/clone/static/css/style.css
@@ -55,9 +55,8 @@ li{
 /* ==================================navbar==================================================== */
 
 .navbar-section{
-	float: left;
-	width: 14rem;
-	min-height: 200vh;
+	min-width: 12rem;
+	min-height: 100vh;
 	background: #4e73df;
 	background-color: #4e73df;
 	background-image: linear-gradient(180deg,#4e73df 10%,#224abe 100%);
@@ -75,11 +74,14 @@ li{
 /* ==========================logo====================== */
 .logo-cont{
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
+	align-items: center;
+	margin-left: 1rem;
+	width: 100%;
 }
 
 .lg-icon{
-	margin:  auto 0;
+	margin:  .5rem 0;
 	transform: rotate(-20deg);
 }
 
@@ -91,16 +93,12 @@ li{
 
 .int-title{
 	opacity: .7;
-	font-weight: 100;
 	margin: auto 0;
 }
 .li-show{
 	display: list-item;
 }
 
-.interface>*{
-	margin: 1rem auto;
-}
 
 /* ===================components=============== */
 
@@ -110,6 +108,8 @@ li{
 	position: relative;
 	margin: .5rem;
 	cursor: pointer;
+	align-items: center;
+	color: var(--white);
 }
 
 .components-cont>*{
@@ -186,6 +186,11 @@ li{
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+
+}
+
+.round-toggle span i{
+	transition: .3s ease all;
 }
 
 /* =====================================topnav============================== */
@@ -276,13 +281,13 @@ li{
 
 .copyright{
 	position: absolute;
-	left: 55%;
-	transform: translateX(-45%);
+	left: 50%;
+	transform: translateX(-50%);
 	top: 99%;
 	color: var(--secondary);
 }
 
-
-.wrapper{
-	margin: 0 .5rem;
+.main-wrapper{
+	display: flex;
+	max-width: 100vw;
 }
